--- a/css/styles.css
+++ b/css/styles.css
@@ -72,7 +72,7 @@ nav {
   padding: 20px;
   border-radius: 8px;
   text-align: center;
-  width: 300px;
+  width: 100%;
   box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.3);
   position: relative;
 }
@@ -236,13 +236,17 @@ nav {
   }
 }
 
-
+#addLoanForm{
+  width: 37%;
+  margin: 2%;
+  float: left;
+}
 
 /* Contêiner para gráfico e slider*/
 .chart-and-slider-container {
   width: 45%;
   margin: 2%;
-  float: left;
+  float: right;
 }
 
 /* Contêiner para as informações de mercado (texto) */
