--- a/css/styles.css
+++ b/css/styles.css
@@ -375,18 +375,21 @@ nav {
 
 .noticias {
   margin: 20px auto;
-  width: 100%;
   height: auto;
   text-align: left;
   display: inline-block;
+  width: 100%;
+  overflow: hidden;
 }
 
 .news-container {
   display: flex;
   flex-wrap: nowrap;
   gap: 20px;
-  justify-content: center;
-  overflow: scroll;
+  justify-content: flex-start;
+  overflow-x: auto;
+  overflow-y: hidden;
+  width: max-content;
 }
 
 /* Card individual de notícia */
